[package]
name = "todoodler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Complicated
tuirealm = "^1.8.0"
# Not terrible
tui = "0.19"
unicode-segmentation = "1.2"
unicode-width = "0.1"
crossterm = "0.25"
reqwest = { version = "0.11", features = ["json"] }